# plover_auto_identifier

./: README.md  setup.cfg
plover_auto_identifier/: __init__.py  controller.py  delete_char.py
