[metadata]
name = plover_auto_identifier
version = 0.0.1
author = user202729
description = Plover plugin to make typing identifier in programming languages easier
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3 or later (GPLv3+)
url = https://github.com/user202729/plover_auto_identifier
classifiers =
    Environment :: Plugins
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
keywords = plover plover_plugin

[options]
zip_safe = True
install_requires =
    plover>=4.0.0.dev8
packages = plover_auto_identifier

[options.entry_points]
plover.extension =
	plover_auto_identifier = plover_auto_identifier:Main
